2011-06-03  Jeff Johnston  <jjohnstn@redhat.com>

	Regenerate from updated wiki-page.
	* Linux_Tools_Project/GCov/User_Guide/Installation-and-Set-Up.html: Regenerated.
	* Linux_Tools_Project/GCov/User_Guide/Troubleshooting.html: Ditto.

2011-06-02  Jeff Johnston  <jjohnstn@redhat.com>

	Regenerate from updated wiki-page.
	* Linux_Tools_Project/GCov/User_Guide/images/gcov-binary-file.png: Removed.
	* Linux_Tools_Project/GCov/User_Guide/images/Gcov-binary-file.png: Added.
	* Linux_Tools_Project/GCov/User_Guide/images/gcov-sort-per-folder.png: Removed.
	* Linux_Tools_Project/GCov/User_Guide/images/Gcov-sort-per-folder.png: Added.
	* Linux_Tools_Project/GCov/User_Guide/images/gcovAnnotatedSource.png: Removed.
	* Linux_Tools_Project/GCov/User_Guide/images/GcovAnnotatedSource.png: Added.
	* Linux_Tools_Project/GCov/User_Guide/images/gcovView.png: Removed.
	* Linux_Tools_Project/GCov/User_Guide/images/GcovView.png: Added.
	* Linux_Tools_Project/GCov/User_Guide/Gcov-main-view.html: Regenerated.
	* Linux_Tools_Project/GCov/User_Guide/Opening-gcov-result.html: Ditto.

2011-05-31  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Add bundle localization plugin. 

2011-05-31  Jeff Johnston  <jjohnstn@redhat.com>

	* plugin.xml: New file.
	* toc.xml: Ditto.
	* META-INF/MANIFEST.MF: Ditto.
	* images/*.gif: Ditto.
	* Linux_Tools_Project/*: Ditto.
	* about.html: Ditto.
	* build-helper.xml: Ditto.
	* build.properties: Ditto.
	* extract-markup.xsl: Ditto.
	* pom.xml: Ditto.
	* toc.xml: Ditto.
	* plugin.properties: Ditto.