@@ -1,12 +1,10 @@
 bin.includes = META-INF/,\
                plugin.xml,\
                toc.xml,\
-               cheatsheets/,\
                about.html,\
                plugin.properties,\
-               doc/,\
                Linux_Tools_Project/,\
-               tools.xml,\
-               images/
+               images/,\
+               book.css
 jars.compile.order = .
 
